--- a/src/app/pages/pages-login/pages-login.component.html
+++ b/src/app/pages/pages-login/pages-login.component.html
@@ -4,15 +4,14 @@
       <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
          <div class="container">
             <div class="row justify-content-center">
-               <div class="col-lg-6 col-md-6 d-flex flex-column align-items-center justify-content-center">
+               <div class="col-lg-4 col-md-4 d-flex flex-column align-items-center justify-content-center">
                   <div class="d-flex justify-content-center py-4"> <a routerLink="/"
                         class="logo d-flex align-items-center w-auto"> <img style="margin-bottom: 6px;"
-                           src="https://datastuntstaging.co.in/dashboard/assets/img/favicon.png" alt=""> <span
-                           class="d-none d-lg-block">AHNMI</span> </a></div>
+                           src="/assets/img/favicon.png" alt=""> <span class="d-none d-lg-block">AHNMI</span> </a></div>
                   <div class="card mb-3">
                      <div class="card-body">
                         <div class="pt-2 pb-2">
-                           <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
+                           <h5 class="card-title text-center pb-0 fs-4">MEMBER LOGIN</h5>
                            <!-- <p class="text-center small">Enter your username & password to login</p> -->
                         </div>
                         <form class="row g-3 needs-validation" [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm)">
@@ -50,7 +49,12 @@
 
 
 
-                           <div class="col-12"> <button class="btn rounded btn-primary py-2 w-100" type="submit">Login</button></div>
+                           <div class="col-12 pr d-flex flex-column align-items-center justify-content-center ">
+                              <div class="login-btn d-flex align-items-center justify-content-center">
+                                 <button id="loginbtn" class="btn rounded d-flex justify-content-center align-items-center btn-primary py-2 w-100" type="submit">Login</button>
+                                 <div *ngIf="loading" class=" loading"></div>
+                              </div>
+                           </div>
                            <div class="col-12 d-flex justify-content-center">
                               <p class="small mb-0">Don't have account? <a routerLink="/pages-register">Create an
                                     account</a></p>
@@ -70,4 +74,6 @@
    </div>
 </main>
 
-<app-loader *ngIf="isLoading" ></app-loader>
+
+
+<!-- <app-loader *ngIf="isLoading" ></app-loader> -->
