--- a/src/app/pages/pages-register/pages-register.component.html
+++ b/src/app/pages/pages-register/pages-register.component.html
@@ -3,12 +3,12 @@
        <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-2">
           <div class="container">
              <div class="row justify-content-center">
-                <div class="col-lg-6 col-md-6 d-flex flex-column align-items-center justify-content-center">
+                <div class="col-lg-4 col-md-4 d-flex flex-column align-items-center justify-content-center">
                    <div class="d-flex justify-content-center py-3"> <a routerLink="/" class="logo d-flex align-items-center w-auto"> <img style="margin-bottom: 6px;" src="../../../favicon.ico" alt=""> <span class="d-none d-lg-block">AHNMI</span> </a></div>
                    <div class="card mb-3">
                       <div class="card-body">
                          <div class="pt-2 pb-2">
-                            <h5 class="card-title text-center pb-0 fs-4">Create an Account</h5>
+                            <h5 class="card-title text-center pb-0 fs-4">NEW MEMBER SIGN UP</h5>
                             <!-- <p class="text-center small">Enter your personal details to create account</p> -->
                          </div>
                          <form class="row g-3 needs-validation" [formGroup]="registerForm" (ngSubmit)="onRegister(registerForm)">
