--- a/src/app/pages/pages-login/pages-login.component.css
+++ b/src/app/pages/pages-login/pages-login.component.css
@@ -3,19 +3,67 @@ button {
     border: none;
 }
 
-input{
+input {
     padding: 10px;
 }
 
-input[type="checkbox"]{
+input[type="checkbox"] {
     padding: 4px;
 }
 
-.btn:focus{
+.btn:focus {
     box-shadow: none;
 }
 
-.btn:focus-visible{
+.btn:focus-visible {
     border-radius: 0.375rem !important;
     box-shadow: none;
 }
+
+
+/* Loader CSS Start Here */
+.loader {
+    display: block;
+    top: 10%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+
+.pr{
+    position: relative;
+}
+
+.hide{
+    display: none !important;
+}
+
+.login-btn{
+    background-color: #f47221 !important; 
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+}
+
+.loading {
+    width: 100%;
+    border: 4px solid #ccc;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border-top-color: white;
+    border-left-color: white;
+    animation: spin 1s linear infinite ;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* Loader CSS End Here */
