--- a/src/app/pages/policy-advocacy/policy-advocacy.component.css
+++ b/src/app/pages/policy-advocacy/policy-advocacy.component.css
@@ -37,7 +37,11 @@ ul li a.active{
 }
 
 /* Card Body Color */
-.col-4:nth-child(1) .card-body {
+
+.col-4 .card-body{
+    background-color: #0a1438d9 !important;
+}
+/* .col-4:nth-child(1) .card-body {
     background-color: #906090 !important;
 }
 
@@ -59,7 +63,7 @@ ul li a.active{
 
 .col-4:nth-child(6) .card-body {
     background-color: #a22b2b !important;
-}
+} */
 /* Card Body Color */
 
 /* Document table */
@@ -132,3 +136,122 @@ ul li a.active{
 }
 
 /* Pdf end */
+
+/* Comment Form */
+.comment-form textarea{
+    width: 100%;
+}
+
+.width-fit{
+    width: fit-content;
+    font-size: 15px;
+    padding: 4px 12px;
+    margin: 0;
+}
+
+.comment-profile-image img{
+    width: 40px;
+    height: 40px;
+}
+
+.profile-author{
+    font-size: 15px !important;
+    font-weight: 700;
+}
+
+.post-message{
+    font-size: 17px !important;
+    font-weight: 400;
+}
+
+.replybtn{
+    /* color: rgba(15, 63, 240, 0.8) !important; */
+    color: black !important;
+    background: gainsboro;
+    outline: none;
+    border: none;
+    font-size: 13px;
+    font-weight: 500;
+    border-radius: 4px;
+}
+.replybtn:hover{
+    background-color: rgba(15, 63, 240, 0.8);
+    color: white !important;
+}
+
+.cancelbtn{
+    /* color: rgba(15, 63, 240, 0.8) !important; */
+    color: black !important;
+    background: gainsboro;
+    outline: none;
+    border: none;
+    font-size: 13px;
+    font-weight: 500;
+    border-radius: 4px;
+}
+
+.cancelbtn:hover{
+    background-color: grey;
+}
+
+/* background light */
+.bg-5{
+    /* background-color: rgba(0, 0, 0, 0.25) !important; */
+    color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.cat-card{
+    cursor: pointer;
+    transition: 0.4s ease;
+}
+
+.cat-card:hover{
+    transform: scale(1.02);
+}
+
+/* Loadind */
+
+.comment-btn{
+    width: 100px;
+    height: 40px;
+    background: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+}
+
+.comment-btn button{
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    color: white;
+}
+
+
+.reply-btn{
+    width: 100px;
+    height: 40px;
+    background: rgba(15, 63, 240, 0.8);
+    display: flex;
+    color: white !important;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+}
+
+.reply-btn button{
+    border: none;
+    background: transparent;
+    color: white !important;
+    cursor: pointer;
+}
+
+.loading{
+    position: relative !important;
+    left: 0;
+    border: 2px solid white;
+    width: 18px !important;
+    height: 18px !important;
+}
+
